--- a/Scriber/package.json
+++ b/Scriber/package.json
@@ -22,6 +22,7 @@
     "expo": "^19.0.0",
     "react": "^16.0.0-alpha.12",
     "react-native": "^0.46.1",
+    "react-native-router-flux": "^4.0.0-beta.16",
     "react-redux": "^5.0.5",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
