--- a/Scriber/package.json
+++ b/Scriber/package.json
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "expo": "^19.0.0",
-    "react": "^16.0.0-alpha.12",
+    "react": "^16.0.0-beta.3",
     "react-native": "^0.46.1",
     "react-native-router-flux": "^4.0.0-beta.16",
     "react-redux": "^5.0.5",
