--- a/Scriber/package.json
+++ b/Scriber/package.json
@@ -20,6 +20,7 @@
     "react": "^16.0.0-beta.3",
     "react-native": "^0.46.1",
     "react-native-audio": "^3.2.2",
+    "react-native-calendars": "^1.5.6",
     "react-native-router-flux": "^4.0.0-beta.16",
     "react-native-sound": "^0.10.3",
     "react-redux": "^5.0.5",
