--- a/Scriber/package.json
+++ b/Scriber/package.json
@@ -21,6 +21,7 @@
     "react-native": "^0.46.1",
     "react-native-audio": "^3.2.2",
     "react-native-router-flux": "^4.0.0-beta.16",
+    "react-native-sound": "^0.10.3",
     "react-redux": "^5.0.5",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
