--- a/Scriber/package.json
+++ b/Scriber/package.json
@@ -22,6 +22,7 @@
     "react-native-audio": "^3.2.2",
     "react-native-calendars": "^1.5.6",
     "react-native-router-flux": "^4.0.0-beta.16",
+    "react-native-sound": "^0.10.3",
     "react-redux": "^5.0.5",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
