--- a/Scriber/package.json
+++ b/Scriber/package.json
@@ -23,6 +23,7 @@
     "react-native-calendars": "^1.5.6",
     "react-native-router-flux": "^4.0.0-beta.16",
     "react-native-sound": "^0.10.3",
+    "react-native-vector-icons": "^4.3.0",
     "react-redux": "^5.0.5",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
