--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,10 @@ Scriber/npm-debug.*
 Scriber/backend/.env
 Scriber/backend/backend/__pycache__/
 Scriber/backend/scriber/__pycache__/
-Scriber/*.mp3
+Scriber/backend/scriber/*.mp3
 Scriber/backend/scriber/migrations/
-Scriber/*.aac
-Scriber/*.pyc
+Scriber/backend/scriber/*.aac
+*.pyc
 Scriber/ios/build/
 Scriber/ios/node_modules/
 Scriber/ios/.expo/
