--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,28 @@
-
+asn1crypto==0.22.0
+boto==2.48.0
+certifi==2017.7.27.1
+cffi==1.10.0
+chardet==3.0.4
+cryptography==2.0.3
+dj-database-url==0.4.2
+Django==1.11.4
+django-cors-middleware==1.3.1
+django-dotenv==1.4.1
+django-oauth-toolkit==1.0.0
+django-showurls==1.0.1
+djangorestframework==3.6.3
+djangorestframework-jwt==1.11.0
+gunicorn==19.7.1
+idna==2.5
+oauthlib==2.0.2
+psycopg2==2.7.3
+pycparser==2.18
+pydub==0.20.0
+PyJWT==1.5.2
+pyOpenSSL==17.2.0
+pysolr==3.6.0
+pytz==2017.2
+requests==2.18.3
+six==1.10.0
+urllib3==1.22
+watson-developer-cloud==0.26.1
