--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "aws-sdk": "^2.97.0",
     "react": "^16.0.0-beta.3",
     "react-native": "^0.46.4",
     "react-native-audio": "^3.2.2",
