--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   },
   "dependencies": {
     "aws-sdk": "^2.97.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.1.1",
     "react": "^16.0.0-beta.3",
     "react-native": "^0.46.4",
     "react-native-audio": "^3.2.2",
+    "react-native-aws3": "0.0.8",
     "react-native-calendars": "^1.5.6",
+    "react-native-config": "^0.6.0",
     "react-native-router-flux": "^4.0.0-beta.16",
     "react-native-sound": "^0.10.3",
     "react-native-vector-icons": "^4.3.0",
