--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "apsl-react-native-button": "^3.1.0",
     "aws-sdk": "^2.97.0",
     "babel-plugin-transform-inline-environment-variables": "^0.1.1",
     "react": "^16.0.0-beta.3",
@@ -25,12 +26,12 @@
     "react-native-aws3": "0.0.8",
     "react-native-calendars": "^1.5.6",
     "react-native-config": "^0.6.0",
+    "react-native-popup-menu": "^0.8.0",
     "react-native-router-flux": "^4.0.0-beta.16",
     "react-native-sound": "^0.10.3",
     "react-native-vector-icons": "^4.3.0",
     "react-redux": "^5.0.5",
     "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
   }
 }
