--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-native-aws3": "0.0.8",
     "react-native-calendars": "^1.5.6",
     "react-native-config": "^0.6.0",
+    "react-native-file-download": "0.0.10",
+    "react-native-fs": "^2.5.1",
     "react-native-popup-menu": "^0.8.0",
     "react-native-router-flux": "^4.0.0-beta.16",
     "react-native-sound": "^0.10.3",
